# best-papers

./: .env.sample  .gitignore  CNAME  Gemfile  LICENSE  README.md  _config.yml  about.md  index.markdown  list_template.html  pyproject.toml  requirements.txt  test.html
_data/: navigation.yml  papers.json  papers_2.json  papers_2013.json  papers_2014.json  papers_2015.json  papers_2016.json  papers_2017.json  papers_2018.json  papers_2019.json  papers_2020.json  papers_2021.json  papers_2022.json  papers_2023.json  papers_2024.json  papers_2025.json  papers_5.json  papers_all.json
_includes/: footer.html
_includes/head/: custom.html
_posts/: 2022-08-18-welcome-to-jekyll.markdown
featured_snippets/: 2.txt  2013.txt  2014.txt  2015.txt  2016.txt  2017.txt  2018.txt  2019.txt  2020.txt  2021.txt  2022.txt  2023.txt  2024.txt  2025.txt  5.txt  all.txt
pages/: 2.md  2013.md  2014.md  2015.md  2016.md  2017.md  2018.md  2019.md  2020.md  2021.md  2022.md  2023.md  2024.md  2025.md  5.md  all.md
src/: arxiv.py  constants.py  database.py  db_to_papers_data_file.py  download.py  download_papers_data.py  generate_static_files.py  logging_config.py  main.py  scope.py  semantic_scholar.py  show_missing_papers.py  website.py
