[project]
name = "best-papers"
version = "0.1.0"
description = "thebestnlppapers.com"
authors = [
    { name = "Maciej Gruszczyński", email = "maciek.gruszka@gmail.com" }
]
dependencies = [
    "python-dotenv==1.0.0",
    "retry==0.9.2",
    "requests==2.31.0",
    "xmltodict==0.13.0",
    "aiohttp==3.9.1",
    "tqdm==4.66.1",
    "pyyaml==6.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye.scripts]
arxiv = "python3 -m src.main -a"
semantic-scholar = "python3 -m src.main -s"
website = "python3 -m src.main -w"